# arkade

./: .flatpak-manifest.json  .gitignore  .kde-ci.yml  CMakeLists.txt  README.md  org.kde.arkade.appdata.xml  org.kde.arkade.desktop  org.kde.gamecenter.appdata.xml  org.kde.gamecenter.desktop
games/: CMakeLists.txt
games/block-tennis/: metadata.desktop  metadata.json
games/block-tennis/contents/ui/: README.md  enums.ts  game.js  game.ts  main.qml  tsconfig.json
games/fourinline/: metadata.desktop  metadata.json
games/fourinline/contents/ui/: Block.qml  Game.qml  main.qml
games/samegame/: CMakeLists.txt  metadata.desktop  metadata.json  org.kde.samegame.desktop
games/samegame/contents/ui/: BoomBlock.qml  main.qml  samegame.js
games/samegame/package/: metadata.desktop
src/: CMakeLists.txt  arkade.cpp  arkade.h  game-packagestructure.desktop  game-packagestructure.json  gamecenter.cpp  gamecenter.h  gamepackage.h  gamesmodel.cpp  gamesmodel.h  main.cpp  minesweepermodel.cpp  minesweepermodel.h
src/components/: scene.cpp  scene.h
src/contents/ui/: Main.qml  main.qml
src/packagestructure/: CMakeLists.txt  game-packagestructure.json  gamepackage.cpp  gamepackage.h
